# coingecko

./: README.md  dev.py  main.py  pyproject.toml
.github/workflows/: run.yml
.state/local/: coins.json  prices.json
assets/coins/: coins.py
assets/prices/: prices.py
data/coingecko/debug/: logs.db
src/: coingecko_client.py  connector_utils.py  main.py
src/ingest/: coins.py  prices.py
src/nodes/: coins.py  prices.py  prices_daily.py
src/transforms/: coins.py  prices.py
src/transforms/prices/: main.py  test.py
src/utils/: __init__.py
