[project]
name = "coingecko"
version = "0.1.0"
description = "CoinGecko cryptocurrency data connector"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "duckdb",
    "httpx",
    "pandas",
    "pyarrow",
    "pyiceberg",
    "ratelimit",
    "requests",
    "sqlalchemy>=2.0.43",
    "tenacity",
]

[tool.uv]
dev-dependencies = []
