[project]
name = "coingecko"
version = "0.1.0"
description = "CoinGecko cryptocurrency data connector"
requires-python = ">=3.11"
dependencies = [
    "s3fs>=2024.0",
    "fsspec>=2024.0",
    "psutil>=5.9.0",
    "boto3",
    "httpx",
    "pyarrow",
    "deltalake>=0.17.0",
    "ratelimit",
    "tenacity",
]

[tool.uv]
dev-dependencies = [
    "psutil>=5.9.0",]
